fixed z-index

--- a/src/components/topMenu.css
+++ b/src/components/topMenu.css
@@ -1,4 +1,5 @@
 .base {
+    z-index: 100;
     top: 0;
     position: fixed;
 
